react_versioned_docs/version-0.14.x/reference/participant.mdx
---
sidebar_position: 4
---

# DyteParticipant

## Properties

| Property name        | Data type                              | Use                                                                                                                                  |
| -------------------- | -------------------------------------- | ------------------------------------------------------------------------------------------------------------------------------------ |
| id                   | string                                 | Peer ID of the participant                                                                                                           |
| clientSpecificId     | any                                    | Client specific ID for this participant that was passed to the add participant API                                                   |
| name                 | string                                 | Name set by the participant or as sent in the `add participant` API                                                                  |
| picture              | string                                 | URL of the participant picture, as sent in the `add participant` API                                                                 |
| audioEnabled         | boolean                                | Checks if the participant is producing audio                                                                                         |
| videoEnabled         | boolean                                | Checks if the participant is producing video                                                                                         |
| audioTrack           | MediaStreamTrack                       | Audio stream from the participant                                                                                                    |
| videoTrack           | MediaStreamTrack                       | Video stream from the participant                                                                                                    |
| isMe                 | boolean                                | Checks if the participant is the current participant, in which case it can be treated as [`DyteSelfParticipant`](./self-participant) |
| isPinned             | boolean                                | Checks if the participant video is pinned (by the host, by the user, or by the preset)                                               |
| metadata.preset_name | string                                 | The preset that is applied to the participant                                                                                        |
| metadata.view_type   | Enum ([DyteViewTypes](#dyteviewtypes)) | The type of meeting view that the participant is in                                                                                  |

## Methods

| Method name  | Params (with data type)             | Use                                                                                                                                                                                            |
| ------------ | ----------------------------------- | ---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
| pin          |                                     | Pin the participant video to the grid for everyone in the meeting                                                                                                                              |
| unpin        |                                     | Unpin the participant video from the grid for everyone in the meeting                                                                                                                          |
| disableAudio |                                     | Disable audio stream from another participant, effectively muting them for everyone in the meeting                                                                                             |
| disableVideo |                                     | Disable video stream from another participant, effectively blanking them out for everyone in the meeting                                                                                       |
| zoom         | scale: number, x: number, y: number | Zoom on to a participant's video for everyone in the meeting. Scale represents the scale of zoom whereas x and y represent the offset from center to reposition the video inside the container |
| setOverlay   | overlay: ReactNode \| HTMLElement   | Set an overlay on the participant video (see [video overlays](./../customize-meeting-ui#add-overlay--filter-to-meeting-video) for more details)                                                |
| sendMessage  | message: any                        | Send custom event to the participant (see [this section](./../advanced-usage#send-a-custom-message-to-a-participant-p2p-message--data-exchange) for more details)                              |

## DyteViewTypes

`DyteViewTypes` is an enum that enumerates the different kind of meeting views, that are available to a participant in Dyte meeting.

```tsx
DyteViewTypes {
    "GROUP_CALL",
    "WEBINAR"
}
```

| Type       | Meaning                                                                                                                                                                                                                                                                   |
| ---------- | ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
| GROUP_CALL | A meeting where all participants are usually allowed to produce audio and video, useful for meetings where all participants are required to participate                                                                                                                   |
| WEBINAR    | A meeting where only participant(s) with privilege permissions (a presenter or a group of presenters or a host or a group of hosts) are allowed to produce audio and video whereas the other participants may request permissions to ask questions or join as a presenter |
